--- a/Europe/stylesheet.css
+++ b/Europe/stylesheet.css
@@ -16,13 +16,12 @@ body {
 h1  {
   color: rgb(50, 50, 50);
   font-family: Arial, Calibri, sans-serif;
-  margin-top: 35px;
-  margin-bottom: 20px;
+  margin-top: 35px 0 20px 0;
 }
 p {
   font-family: Arial, sans-serif;
-  margin-bottom: 20px;
-  line-height: 15px;
+  margin-bottom: 18px;
+  line-height: 25px;
 }
 
 /* Formating Links */
