--- a/Europe/stylesheet.css
+++ b/Europe/stylesheet.css
@@ -9,14 +9,15 @@
 
 body {
   background-color: rgb(127, 127, 127);
-  color: rgb(255, 255, 255)
+  color: rgb(255, 255, 255);
 }
 
 /* Set h1 heading format*/
 h1  {
   color: rgb(50, 50, 50);
   font-family: Arial, Calibri, sans-serif;
-  margin-top: 35px 0 20px 0;
+  margin: 35px 0 20px 0;
+  text-align: center;
 }
 p {
   font-family: Arial, sans-serif;
@@ -31,4 +32,21 @@ a {
 }
 a:hover {
   text-decoration: underline;
+}
+
+/* Format List */
+ul {
+  margin: 0 0 10px 30px;
+  font-family: Arial, sans-serif;
+}
+
+.container{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+.left-content {
+  margin-left: 20px;
+}
+
+.right-content {
 }
